--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -627,8 +627,6 @@
 }
 .kr-sg-input-search {
   display: inline-block;
-  width: 0px;
-  display: none;
   width: 300px;
   height: 20px;
   position: relative;
@@ -638,6 +636,25 @@
     display: block;
     width: 300px;
   }
+  .close-icon{
+    position: absolute;
+    right: 11px;
+    top: 12px;
+    cursor: pointer;
+}
+  .input-search{
+    border: 1px solid #E4E5E7;                            
+    border-radius: 4px;
+    padding-left: 36px;
+    padding-right: 15px;
+    font-size: 14px;
+    &:focus{
+        border: 1px solid #1372ff;
+    }
+    &::placeholder{
+        color: #BDC1C6;
+    }
+}
 }
 .seach-block {
   color: #202124;
