--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -53,9 +53,10 @@
                                 <label for="selectAllFaqs" class="checkbox-custom-label"></label>
                             </div>
                             <div class="kr-sg-input-search">                               
-                                <input type="text" placeholder="Search" class="input-search" id="searchFaqs"
-                                    (keyup)="applyFilter($event.target.value)" name='faqsSearch' autocomplete="off">
-                                <img src="assets/icons/search-gray.svg" class="search-icon">
+                                <input type="text" placeholder="Search" class="input-search" 
+                                [(ngModel)]="searchSources" name='faqsSearch' autocomplete="off" [ngClass]="{'pl-33':!searchSources,'pl-2':searchSources}">
+                                <img src="assets/icons/search-gray.svg" class="search-icon" *ngIf="!searchSources">
+                                <img class="close-icon" *ngIf="searchSources" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchSources}" (click)="searchSources='';">
                             </div>
                         </ng-container>                            
                     </div>
@@ -71,7 +72,7 @@
 
                             <div id="accordion" class="accordion-content">
                                 <ng-container *ngIf="customizeList">
-                                    <div class="card-content" *ngFor="let list of customizeList;let i = index">
+                                    <div class="card-content" *ngFor="let list of customizeList | filter: [ searchSources , 'searchQuery'];let i = index">
                                         <div class="card_link collapsed" [ngClass]="{'is-checked': list.check == true || selectedRecord._id == list._id}" (click) ="clickCustomizeRecord(list,$event)">      
                                             <div class="d-flex align-items-center w-100">
                                                 <div class="kr-sg-checkbox" (click)="$event.stopImmediatePropagation();">
