--- a/findly-builder/src/app/components/result-insights/result-insights.component.html
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.html
@@ -96,7 +96,7 @@
                     </div>    
                     
                 </div>
-                <span *ngIf='totalRecord'><app-record-pagination [totalRecord]='totalRecord' [limitpage]='limitPage' (pageChanged)="paginate($event,'Results')"></app-record-pagination></span>
+                <span *ngIf='totalRecord && totalRecord > 10'><app-record-pagination [totalRecord]='totalRecord' [limitpage]='limitPage' (pageChanged)="paginate($event,'Results')"></app-record-pagination></span>
             </div>
         </div>
     </perfect-scrollbar>  
