--- a/findly-builder/src/app/components/search-insights/search-insights.component.html
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.html
@@ -100,7 +100,7 @@
 
                             </div>
                             <!-- <span *ngIf='topQuriesWithNoResults.length===0'>No results found</span> -->
-                            <div *ngIf='topQuriesWithNoResults?.length' style="margin : 15px"><app-record-pagination [totalRecord]='QWNR_totalRecord' [limitpage]='QWNR_limitPage' (pageChanged)="paginate($event,'QWNR')"></app-record-pagination></div>
+                            <div *ngIf='topQuriesWithNoResults?.length && QWNR_totalRecord>10' style="margin : 15px"><app-record-pagination [totalRecord]='QWNR_totalRecord' [limitpage]='QWNR_limitPage' (pageChanged)="paginate($event,'QWNR')"></app-record-pagination></div>
                         </div>
                     </div>
                 </div>
