--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -36,7 +36,7 @@
             <perfect-scrollbar class="traits-scroll-data" *ngIf="traits.traitGroups &&  traits.traitGroups.length">
                 <div class="traits-body-sec">
                     <div class="content-body row col-12 m-0" *ngFor="let traitGroup of  traits.traitGroups | traitsFilter:serachTraits; let index = index">
-                        <div class="col-3 traitGroup-name text-truncate" ngbTooltip="{{traitGroup.groupName || '---'}}" placement="top-center" container='body' tooltipClass="ngb_tooltip_custom_class sampleJson">{{traitGroup.groupName || '---'}}</div>
+                        <div class="col-3 traitGroup-name text-truncate" ><span ngbTooltip="{{traitGroup.groupName || '---'}}" placement="top-center" container='body' tooltipClass="ngb_tooltip_custom_class sampleJson">{{traitGroup.groupName || '---'}}</span></div>
                         <div class="col-7 traits-groups row m-0 align-items-center pr-0">
                             <span *ngFor="let trait of traitGroup.traits| slice:0:getTraitsSliceValue(traitGroup.traits); let i=index;" class="trait-more">
                                 {{i!==0 ?', ':''}}{{trait.traitName || '---'}}
@@ -114,12 +114,12 @@
             </div>
 
             <div class="kr-sg-input-text add-traits-input">              
-                <input autocomplete="off" type="text" maxlength="20" placeholder="Type and Enter to Add Traits" class="input-text"  #traitValue [(ngModel)]="add.traitName"(keyup.enter)="addTraits(add.traitName,$event)">
+                <input autocomplete="off" type="text" maxlength="60" placeholder="Type and Enter to Add Traits" class="input-text"  #traitValue [(ngModel)]="add.traitName"(keyup.enter)="addTraits(add.traitName,$event)">
             </div>
 
             <ng-container *ngIf="traits.addEditTraits && traits.addEditTraits.traitsArray && traits.addEditTraits.traitsArray.length">
                 <div class="content-body-traits row col-12" *ngFor="let item of traits.addEditTraits.traitsArray;let index = index;"  (click)="openAddUtteranceModel(index,item.key,item.data,true)" [ngClass]="{'pointer':item.data.length}">
-                    <div class="col-4 group-name text-truncate" ngbTooltip="{{item.key}}" placement="top-center" container='body'  tooltipClass="ngb_tooltip_custom_class sampleJson" *ngIf="showEditTraitInput !== index"> {{item.key}}</div>
+                    <div class="col-4 group-name text-truncate"  *ngIf="showEditTraitInput !== index"><span ngbTooltip="{{item.key}}" placement="top-center" container='body'  tooltipClass="ngb_tooltip_custom_class sampleJson">{{item.key}}</span> </div>
                     <div class="col-6 m-0 align-items-center" *ngIf="showEditTraitInput !== index">
                         <div class="utterances-count" *ngIf="item.data.length">{{item.data.length}} {{item.data.length>1?'Utterances':'Utterance'}}</div>
                         <div class="add-utt-title" *ngIf="!item.data.length" (click)="openAddUtteranceModel(index,item.key,item.data)">
@@ -134,7 +134,7 @@
                         </ng-container>
                     </div> 
                     <div class="kr-sg-input-text add-traits-input mb-0" *ngIf="showEditTraitInput == index" (click)="$event.stopImmediatePropagation()">              
-                        <input autocomplete="off" type="text" maxlength="20" placeholder="Type and Enter to Add Traits " class="input-text shadow-none input-h-40 pl-3" #traitValue [(ngModel)]="item.key"(keyup.enter)="editTraits(item.key,$event,item.displayName)">
+                        <input autocomplete="off" type="text" maxlength="60" placeholder="Type and Enter to Add Traits " class="input-text shadow-none input-h-40 pl-3" #traitValue [(ngModel)]="item.key"(keyup.enter)="editTraits(item.key,$event,item.displayName)">
                         <img class="check-icon" *ngIf="item.key" src="assets/icons/check_green.svg" [ngClass]="{'pr-22':item.key}" (click)="$event.stopImmediatePropagation();editTraits(item.key,$event,item.displayName)" placement="top-center" container='body' ngbTooltip="Save" tooltipClass="ngb_tooltip_custom_class sampleJson" >
                         <img class="close-icon" *ngIf="item.key" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':item.key}" (click)="$event.stopImmediatePropagation();item.key=item.displayName;showEditTraitInput=null;" placement="top-center" container='body' ngbTooltip="Cancel" tooltipClass="ngb_tooltip_custom_class sampleJson" >
                     </div>
@@ -158,7 +158,7 @@
             <ng-container >
                 <div class="content-body-traits row col-12" *ngFor="let utterance of utteranceList;let i = index;" [ngClass]="{'py-0':(showEditUtteranceInput == i)}">
                     <div class="kr-sg-input-text add-traits-input" *ngIf="showEditUtteranceInput == i">
-                        <input autocomplete="off" maxlength="20" type="text" placeholder="Type and Enter to Add Utterances" class="input-text pl-3 shadow-none input-h-40" (keyup)='editUtter($event,utterance,i)' [(ngModel)]='utterance' name='utteranceName'>
+                        <input autocomplete="off" maxlength="60" type="text" placeholder="Type and Enter to Add Utterances" class="input-text pl-3 shadow-none input-h-40" (keyup)='editUtter($event,utterance,i)' [(ngModel)]='utterance' name='utteranceName'>
                         <img class="check-icon" *ngIf="utterance" src="assets/icons/check_green.svg" [ngClass]="{'pr-22':utterance}" (click)="editUtter($event,utterance,i)" placement="top-center" container='body' ngbTooltip="Save" tooltipClass="ngb_tooltip_custom_class sampleJson" >
                         <img class="close-icon" *ngIf="utterance" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':utterance}" (click)="utterance=tempUtterance;showEditUtteranceInput = null;showUtteranceInput = false;" placement="top-center" container='body' ngbTooltip="Cancel" tooltipClass="ngb_tooltip_custom_class sampleJson">
                     </div>
@@ -174,7 +174,7 @@
                 </div>                  
             </ng-container>
             <div class="kr-sg-input-text add-traits-input" *ngIf="showUtteranceInput">
-                <input  maxlength="20" type="text" autocomplete="off" placeholder="Type and Enter to Add Utterances" class="input-text" (keyup)='addNewUtter(newUtterance,$event)' [(ngModel)]='newUtterance' name='utteranceName' [ngClass]="{'err-block' : ((!utteranceList || !utteranceList.length) && uttSubmitted)}">
+                <input  maxlength="60" type="text" autocomplete="off" placeholder="Type and Enter to Add Utterances" class="input-text" (keyup)='addNewUtter(newUtterance,$event)' [(ngModel)]='newUtterance' name='utteranceName' [ngClass]="{'err-block' : ((!utteranceList || !utteranceList.length) && uttSubmitted)}">
                 <img class="check-icon" *ngIf="newUtterance" src="assets/icons/check_green.svg" [ngClass]="{'pr-22':newUtterance}" (click)="addNewUtter(newUtterance,$event)" placement="top-center" container='body' ngbTooltip="Save" tooltipClass="ngb_tooltip_custom_class sampleJson" >
                 <img class="close-icon" *ngIf="newUtterance" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':newUtterance}" (click)="newUtterance='';showUtteranceInput=false;"  placement="top-center" container='body' ngbTooltip="Cancel" tooltipClass="ngb_tooltip_custom_class sampleJson">
                 <img *ngIf="(!utteranceList || !utteranceList.length) && uttSubmitted" id="utteranceNameWarning" src="assets/icons/warning_escalation.svg" style="top: 31%; position: absolute; right: 1.5%; display: block;" [ngStyle]="{'right':newUtterance.length?'7.5%':'1.5%'}" height="12" width="12" />
