--- a/findly-builder/src/app/components/weights/weights.component.scss
+++ b/findly-builder/src/app/components/weights/weights.component.scss
@@ -90,11 +90,14 @@
     .scroll-table-allowRow {
         height: calc(100vh - 222px);
         padding: 0 25px;
-        margin-top: 24px;
+        margin-top: 0px;
         .content-body {
             box-shadow: inset 0px -1px 0px rgba(0, 0, 0, 0.05);
             border: 0;
             padding: 14px 0;
+            &:first-child{
+                margin-top: 24px;
+            }
             .desc {
                 font-size: 12px;
                 color: #979797;
