--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -38,7 +38,7 @@
     </div>
   </div>
   <ng-container *ngIf="!loadingContent">
-    <perfect-scrollbar class="table-scroll-perfect-synonyms" [ngClass]="{newRecoredActive: newSynonymObj.addNew}">
+    <perfect-scrollbar class="table-scroll-perfect-synonyms">
       <div  class="empty-landing-screen"
       *ngIf="!(synonymData && synonymData.length) && !newSynonymObj.addNew && !loadingContent">
       <!-- <img src="assets/images/icons/empty_ill.svg">
@@ -119,7 +119,7 @@
               </span>
             </div>
           </header>
-          <div class="add-synonyms-inputs mt-2 mb-2" *ngIf="!loadingContent && newSynonymObj.addNew">
+          <div class="add-synonyms-inputs" *ngIf="!loadingContent && newSynonymObj.addNew">
             <div class="input-group-items">
               <div class="heading-title">{{'synonyms.adding_a_synonym' | translate }}</div>
               <div class="synonymTypeBlock">
