--- a/findly-builder/src/app/components/team-management/team-management.component.html
+++ b/findly-builder/src/app/components/team-management/team-management.component.html
@@ -1,128 +1,141 @@
 <div class="team-managment-main-container">
-    <div class="mainLoadingSpinner" *ngIf="loadingContent" >
+    <div class="mainLoadingSpinner" *ngIf="loadingContent">
         <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
         <span class="please-wait-message">{{'please_wait'| translate}}</span>
     </div>
     <div *ngIf="!loadingContent">
         <div class="seach_add_feild">
             <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
-            <div class="title col-4 p-0" *ngIf="!(selcectionObj && selcectionObj.selectedCount)">{{'teams.team'| translate}}</div>
-            <div class="title col-4 p-0" *ngIf="selcectionObj && selcectionObj.selectedCount">  
+            <div class="title col-4 p-0" *ngIf="!(selcectionObj && selcectionObj.selectedCount)">{{'teams.team'|
+                translate}}</div>
+            <div class="title col-4 p-0" *ngIf="selcectionObj && selcectionObj.selectedCount">
                 <div class="kr-sg-checkbox p-0 m-0" *ngIf="selcectionObj.selectedCount == allMembersCount">
-                <input id="selectAllFacets" class="checkbox-custom" type="checkbox" (change)="selectAll()"  [(ngModel)]="selcectionObj.selectAll">
-                <label for="selectAllFacets" class="checkbox-custom-label"></label>   
-                <span class="selected_count">{{selcectionObj.selectedCount}} {{'teams.selected'| translate}}</span>          
+                    <input id="selectAllFacets" class="checkbox-custom" type="checkbox" (change)="selectAll()"
+                        [(ngModel)]="selcectionObj.selectAll">
+                    <label for="selectAllFacets" class="checkbox-custom-label"></label>
+                    <span class="selected_count">{{selcectionObj.selectedCount}} {{'teams.selected'| translate}}</span>
+                </div>
+                <div class="kr-sg-checkbox p-0 m-0" *ngIf="selcectionObj.selectedCount != allMembersCount">
+                    <img (click)="selectAllFromPartial()" src="assets/icons/resultranking/selected-checkbox.svg"
+                        class="search-icon">
+                    <span class="selected_count">{{selcectionObj.selectedCount}} {{'teams.selected'| translate}}</span>
+                </div>
             </div>
-            <div class="kr-sg-checkbox p-0 m-0" *ngIf="selcectionObj.selectedCount != allMembersCount">
-                <img (click)="selectAllFromPartial()" src="assets/icons/resultranking/selected-checkbox.svg" class="search-icon">
-                <span class="selected_count">{{selcectionObj.selectedCount}} {{'teams.selected'| translate}}</span>
-            </div>
-           </div>
-            <div class="col-8 p-0 d-flex align-items-center justify-content-end p-0" *ngIf="!selcectionObj.selectedCount">
+            <div class="col-8 p-0 d-flex align-items-center justify-content-end p-0"
+                *ngIf="!selcectionObj.selectedCount">
                 <!-- <div class="kr-sg-input-search m-0"  [ngClass]="{'d-none': !showSearch}">                               
                     <input type="text" placeholder="Search" autocomplete="off" class="input-search" name='searchSources' placeholder="Search" id="fieldSearchId" [(ngModel)]="searchteam">           
                 </div> 
                 <div class="seach-block" (click)="toggleSearch();focusinSearch('fieldSearchId')"><img *ngIf="!showSearch" src="assets/icons/search.svg"><img *ngIf="showSearch" src="assets/images/close.svg">Search</div>
              -->
-             <div class="kr-sg-input-search m-0"  [ngClass]="{'d-none': !showSearch}">                               
-                <input type="text" maxlength="60" placeholder="Search" id="fieldSearchId" class="input-search"  [ngClass]="{'pl-33':!searchteam,'pl-2':searchteam}" autocomplete="off" [(ngModel)]="searchteam"  (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
-                (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
-            <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchteam">
-            <img class="close-icon"  src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchteam}" (mouseover)="activeClose=true" (mouseout)="activeClose=false" (click)="focusoutSearch()"  placement="top-center" container='body' ngbTooltip="Cancel" tooltipClass="ngb_tooltip_custom_class sampleJson">
-            </div> 
-              <div class="searchBlock" (click)="showSearch=!showSearch;focusinSearch('fieldSearchId')">
-                <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data" ><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
-            </div>
-                <div class="add_feild" (click)="createNewMember()"><img src="assets/icons/add_plus.svg">{{'teams.add_members'| translate}}</div>
+                <div class="kr-sg-input-search m-0" [ngClass]="{'d-none': !showSearch}">
+                    <input type="text" maxlength="60" placeholder="Search" id="fieldSearchId" class="input-search"
+                        [ngClass]="{'pl-33':!searchteam,'pl-2':searchteam}" autocomplete="off" [(ngModel)]="searchteam"
+                        (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                        (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'"
+                        (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
+                    <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchteam">
+                    <img class="close-icon" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchteam}"
+                        (mouseover)="activeClose=true" (mouseout)="activeClose=false" (click)="focusoutSearch()"
+                        placement="top-center" container='body' ngbTooltip="Cancel"
+                        tooltipClass="ngb_tooltip_custom_class sampleJson">
+                </div>
+                <div class="searchBlock" (click)="showSearch=!showSearch;focusinSearch('fieldSearchId')">
+                    <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data"><img
+                            src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' |
+                        translate}}</span>
+                </div>
+                <div class="add_feild" (click)="createNewMember()"><img
+                        src="assets/icons/add_plus.svg">{{'teams.add_members'| translate}}</div>
             </div>
 
             <div class="col-8 title text-right delete-action p-0" *ngIf="selcectionObj && selcectionObj.selectedCount">
-                <button id='btn_delete' class="kr-sg-button-danger btn_lg" (click)="deleteFacets(null,selcectionObj.selectedCount)">{{'teams.remove'| translate}}</button>
-            </div> 
+                <button id='btn_delete' class="kr-sg-button-danger btn_lg"
+                    (click)="deleteFacets(null,selcectionObj.selectedCount)">{{'teams.remove'| translate}}</button>
+            </div>
         </div>
         <div class="table-container-data-teams">
             <div class="table-header row">
                 <div class="col-4 with-checkbox title">
                     <div class="kr-sg-checkbox p-0 m-0 d-none">
-                        <input id="selectAllFacets" class="checkbox-custom" type="checkbox" (change)="selectAll()"  [(ngModel)]="selcectionObj.selectAll">
+                        <input id="selectAllFacets" class="checkbox-custom" type="checkbox" (change)="selectAll()"
+                            [(ngModel)]="selcectionObj.selectAll">
                         <label for="selectAllFacets" class="checkbox-custom-label"></label>
                     </div>
                     <div class="title p-0">{{'teams.members'| translate}}</div>
                 </div>
-                <div class="col-8 title">{{'teams.role'| translate}}</div>                              
+                <div class="col-8 title">{{'teams.role'| translate}}</div>
             </div>
             <ng-container *ngIf="(membersList && membersList.length)">
                 <perfect-scrollbar class="scroll-table-data">
-                    <div class="show-checkbox-hover" *ngFor="let member of membersList | filter : [searchteam, 'emailId']">
-                        <div class="table-body row" [ngClass]="{'selected': member.roleInfo[0].role==='Owner'?'':(selcectionObj && selcectionObj.selectedItems && selcectionObj.selectedItems[member._id])}">
+                    <div class="show-checkbox-hover"
+                        *ngFor="let member of membersList | filter : [searchteam, 'emailId']">
+                        <div class="table-body row"
+                            [ngClass]="{'selected': member.roleInfo[0].role==='Owner'?'':(selcectionObj && selcectionObj.selectedItems && selcectionObj.selectedItems[member._id])}">
                             <div class="col-4 withcheckbox title">
                                 <div class="kr-sg-checkbox p-0 m-0" [hidden]="member.roleInfo[0].role==='Owner'">
-                                    <input id="{{member._id}}" class="checkbox-custom" [ngClass]="{'selectEachfacetInput':member.roleInfo[0].role!=='Owner'}" (change)="checkUncheckTeam(member)" type="checkbox">
+                                    <input id="{{member._id}}" class="checkbox-custom"
+                                        [ngClass]="{'selectEachfacetInput':member.roleInfo[0].role!=='Owner'}"
+                                        (change)="checkUncheckTeam(member)" type="checkbox">
                                     <label for="{{member._id}}" class="checkbox-custom-label"></label>
                                 </div>
                                 <div class="title p-0 text-truncate" title="{{member.emailId}}">{{member.emailId}}</div>
                             </div>
-                            <div class="col-5 title text-truncate" title="{{member.roleInfo[0].role===''?'-':member.roleInfo[0].role}}">{{member.roleInfo[0].role===''?'-':member.roleInfo[0].role}}</div>
+                            <div class="col-5 title text-truncate"
+                                title="{{member.roleInfo[0].role===''?'-':member.roleInfo[0].role}}">
+                                {{member.roleInfo[0].role===''?'-':member.roleInfo[0].role}}</div>
                             <div class="col-3 title text-right action-close" *ngIf="member.roleInfo[0].role!=='Owner'">
-                                <img id='btn_delete_facet_tab' class="action_icon" (click)="deleteFacets(member)" src="assets/icons/cross-cancel.svg">
+                                <img id='btn_delete_facet_tab' class="action_icon" (click)="deleteFacets(member)"
+                                    src="assets/icons/cross-cancel.svg">
                             </div>
                         </div>
-                    </div>                    
+                    </div>
                 </perfect-scrollbar>
             </ng-container>
-            <div class="divBlockEmptylastChild text-center">         
+            <div class="divBlockEmptylastChild text-center">
                 <div class="desc">{{'teams.no_results_found'| translate}}</div>
             </div>
-        </div> 
-    </div>    
+        </div>
+    </div>
 </div>
 
-<kr-modal modalType="center" modalClass="modal_popups_ smallModal add-members-modal-popup"  #teamModalPouup>   
+<kr-modal modalType="center" modalClass="modal_popups_ smallModal add-members-modal-popup" #teamModalPouup>
     <div class="modal-header">
         <div class="title">{{'teams.add_members'| translate}}</div>
         <div class="close_icon" (click)="closeModal()"><img src="assets/icons/modal-close.svg"></div>
     </div>
     <ng-container>
-    <perfect-scrollbar class="perfect-scroll-modal-body">
-    <div class="modal-body textAlignLeft">
-        <div class="row m-0 mb-20">
-            <div class="kr-sg-input-text col-12 p-0">                
-                <div class="label-text">{{'teams.app_members'| translate}}</div>
-                <mat-form-field class="example-chip-list">
-                    <mat-chip-list #chipList aria-label="Fruit selection">
-                      <mat-chip
-                        *ngFor="let member of members"
-                        [selectable]="selectable"
-                        [removable]="removable"
-                        (removed)="remove(member)"  
-                        [color]="(member.invalid)?'warn':''"                
-                        >
-                        {{member.value}}
-                        <mat-icon matChipRemove><img src="assets/images/close.svg"></mat-icon>
-                      </mat-chip>
-                      <input
-                        type="email"
-                        placeholder="Type Email and Enter"
-                        #fruitInput
-                        [formControl]="teamCtrl"                        
-                        [matChipInputFor]="chipList"
-                        [matChipInputAddOnBlur]="addOnBlur"
-                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                        (matChipInputTokenEnd)="add($event)"
-                        [ngbTypeahead]="autocomplete"
-                        [resultFormatter]="resultFormatter"
-                        [inputFormatter]="inputFormatter"
-                        [(ngModel)]="autocomplete_text"
-                        maxlength="60" autocomplete="off">
-                    </mat-chip-list>
-                </mat-form-field>
+        <perfect-scrollbar class="perfect-scroll-modal-body">
+            <div class="modal-body textAlignLeft">
+                <div class="row m-0 mb-20">
+                    <div class="kr-sg-input-text col-12 p-0">
+                        <div class="label-text">{{'teams.app_members'| translate}}</div>
+                        <mat-form-field class="example-chip-list">
+                            <mat-chip-list #chipList aria-label="Fruit selection">
+                                <mat-chip *ngFor="let member of members" [selectable]="selectable"
+                                    [removable]="removable" (removed)="remove(member)"
+                                    [color]="(member.invalid)?'warn':''">
+                                    {{member.value}}
+                                    <mat-icon matChipRemove><img src="assets/images/close.svg"></mat-icon>
+                                </mat-chip>
+                                <input type="email" placeholder="Type Email and Enter" #fruitInput
+                                    [formControl]="teamCtrl" [matChipInputFor]="chipList"
+                                    [matChipInputAddOnBlur]="addOnBlur"
+                                    [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                                    (matChipInputTokenEnd)="add($event)" [ngbTypeahead]="autocomplete"
+                                    [resultFormatter]="resultFormatter" [inputFormatter]="inputFormatter"
+                                    [(ngModel)]="autocomplete_text" maxlength="60" autocomplete="off">
+                            </mat-chip-list>
+                        </mat-form-field>
+                    </div>
+                </div>
             </div>
+        </perfect-scrollbar>
+        <div class="modal-footer text-left">
+            <button type="button" class="kr-sg-button-primary btn_lg float-right" (click)="addMember()">{{'teams.add'|
+                translate}}</button>
+            <button type="button" class="kr-sg-button-secondary btn_lg float-right"
+                (click)="closeModal()">{{'teams.cancel'| translate}}</button>
         </div>
-    </div>
-    </perfect-scrollbar> 
-    <div class="modal-footer text-left">
-        <button type="button" class="kr-sg-button-primary btn_lg float-right" (click)="addMember()">{{'teams.add'| translate}}</button>                   
-        <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModal()">{{'teams.cancel'| translate}}</button>
-    </div>    
-</ng-container>
+    </ng-container>
 </kr-modal>
